<resources>
    <string name="app_name">Konduktor</string>
    <string name="next_stop">Następny przystanek:</string>
    <string name="speed">Prędkość:</string>
    <string name="passenger_stats">Liczba pasażerów:</string>
    <string name="station_stats">Bilans ostatniej stacji:</string>
    <string name="boarding_stats">wsiadający:</string>
    <string name="unboarding_stats">wysiadający:</string>
    <string name="comfort">Komfort</string>
    <string name="sip">Informacja pasażerska</string>
    <string name="cctv">Monitoring</string>
    <string name="szp">Licznik pasażerów</string>
    <string name="login">Logowanie</string>
    <string name="user_name">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="logon">Zaloguj</string>
    <string name="lock">Odblokuj ekran</string>
    <string name="outTemp">Temperatura na zewnątrz:</string>
    <string name="inTemp">Temperatura wewnątrz:</string>
    <string name="editTemp">Edytuj zadaną temperaturę</string>
    <string name="save">Zapisz zmiany</string>
    <string name="cancel">Anuluj</string>
    <string name="applocked">Aplikacja zablokowana</string>
    <string name="appName">SMART CONDUCTOR</string>
    <string name="accessDenied">Błędne hasło lub nazwa użytkownika</string>
    <string name="noResponse">Błąd połączenia z serwerem</string>


</resources>