<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BottomMenuFragment">


    <!--    COMFORT SECTION-->
    <View
        android:id="@+id/comfortButtonLine"
        android:layout_width="214.5dp"
        android:layout_height="4.5dp"
        android:layout_marginStart="10.5dp"
        android:layout_marginTop="33.5dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/comfortButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="0dp"
        android:text="@string/comfort"
        android:textColor="@color/fontColor"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="onClickComfort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <!--    SIP SECTION-->
    <View
        android:id="@+id/sipButtonLine"
        android:layout_width="214.5dp"
        android:layout_height="4.5dp"
        android:layout_marginStart="252.5dp"
        android:layout_marginTop="33.5dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/sipButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="255.5dp"
        android:layout_marginTop="0dp"
        android:text="@string/sip"
        android:textColor="@color/fontColor"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    CCTV SECTION-->
    <View
        android:id="@+id/cctvButtonLine"
        android:layout_width="214.5dp"
        android:layout_height="4.5dp"
        android:layout_marginStart="495dp"
        android:layout_marginTop="33.5dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/cctvButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="548.5dp"
        android:layout_marginTop="0dp"
        android:text="@string/cctv"
        android:textColor="@color/fontColor"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="onClickCctv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    SZP SECTION-->
    <View
        android:id="@+id/szpButtonLine"
        android:layout_width="214.5dp"
        android:layout_height="4.5dp"
        android:layout_marginStart="737dp"
        android:layout_marginTop="33.5dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/szpButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="760dp"
        android:layout_marginTop="0dp"
        android:text="@string/szp"
        android:textColor="@color/fontColor"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>