<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    tools:context=".LogonActivity">


    <!--    LOGO PESA-->

    <ImageView
        android:id="@+id/logoPesa"
        android:layout_width="100.5dp"
        android:layout_height="33.5dp"
        android:layout_marginStart="10.5dp"
        android:layout_marginTop="22.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_pesa__1_" />

    <!--    TOP SEPARATING LINE-->
    <View
        android:id="@+id/topLine"
        android:layout_width="0dp"
        android:layout_height="4.5dp"
        android:layout_marginStart="10.5dp"
        android:layout_marginTop="75.5dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    LOGON BOX-->
    <FrameLayout
        android:id="@+id/logonBoxLayout"
        android:layout_width="377dp"
        android:layout_height="332dp"
        android:layout_marginStart="291.33dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="291dp"
        android:layout_marginBottom="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--    LABEL LOGIN-->
        <View
            android:id="@+id/logOnBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/whiteTransparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelLogin"
            android:layout_width="123dp"
            android:layout_height="34dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="23.5dp"
            android:text="@string/login"
            android:textColor="@color/fontColor"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--    LABEL USER NAME-->
        <TextView
            android:id="@+id/labelUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="95dp"
            android:text="@string/user_name"
            android:textColor="@color/fontColor"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--    EDIT TEXT USER NAME-->
        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="254.75dp"
            android:layout_height="26dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="118.5dp"
            android:background="@drawable/edit_text_design"
            android:drawableRight="@drawable/ic_user_name_edit_text"
            android:drawablePadding="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--    LABEL PASSWORD-->
        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="148.5dp"
            android:text="@string/password"
            android:textColor="@color/fontColor"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--    EDIT TEXT PASSWORD-->
        <EditText
            android:id="@+id/editTexPassword"
            android:layout_width="254.75dp"
            android:layout_height="26dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="167dp"
            android:background="@drawable/edit_text_design"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--    LOGON BUTTON-->
        <FrameLayout
            android:id="@+id/logButtonLayout"
            android:layout_width="126.38dp"
            android:layout_height="32.63dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="239dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--    LOGON BUTTON VIEW-->
            <View
                android:id="@+id/logOnButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/button_logon_design"
                android:onClick="onClickButton"
                android:textSize="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--    LOGON BUTTON TEXT-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelLogOnButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="onClickButton"
                    android:text="@string/logon"
                    android:textColor="@color/fontColor"
                    android:textSize="22dp" />
            </RelativeLayout>


        </FrameLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>